# KubeCapWatch

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: report-issue.md
src/: agent.py  config.ini
src/KubeCapWatch/: ObserverEngine.py  agent.py  config.ini
src/KubeCapWatch/api/: services.py
src/KubeCapWatch/notify/: console.py  email_module.py  logger.py  slack.py
src/KubeCapWatch/resource_manager/: resource_manager.py  resource_object.py  scan_resources.py
src/api/: services.py
src/resource_manager/: resource_manager.py  resource_object.py  scan_resources.py
tests/: conftest.py  test_resource_manager.py
