[metadata]
# replace with your username:
name = kube-cap-watch-pkg-nghazali
version = 0.0.1
author = Nasser Ghazali
author_email = nghazali@gmail.com
description = Scan the resources in Kubernetes and notify if the resources are starving
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nghazali/KubeCapWatch
project_urls =
    Bug Tracker = https://github.com/nghazali/KubeCapWatch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
